Fix menu closer align to left bug.

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -200,6 +200,7 @@ div.header-bar {
                     img.header-bar-collapse-menu-closer {
                         flex: 0;
                         width: auto; height: 24px;
+                        margin-left: auto;
                         margin-right: 20px;
                         cursor: pointer;
                     }
